<?xml version="1.0"?>
<package format="2">
  <name>v2x_msgs</name>
  <version>0.0.0</version>
  <description>The v2x_msgs package</description>

  <maintainer email="ashrith.shreekanth@fluxauto.xyz">ashrith-shreekanth</maintainer>
  <license>TODO</license>
  <url type="website">https://fluxauto.xyz</url>
  <author email="ashrith.shreekanth@fluxauto.xyz">Ashrith Shreekanth</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
